[package]
name = "transaction_engine"
authors = ["Adrien Vaillant"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version="1.0.144", features=["derive"]}
clap = {version="3.2.21", features=["derive"]}
log = "0.4.17"
stderrlog = "0.5.3"